fix(chatsoverview): fix spacing

--- a/src/sass/pages/_ChatsOverview.scss
+++ b/src/sass/pages/_ChatsOverview.scss
@@ -54,7 +54,7 @@
         line-height: 1.5;
 
         &--by-me {
-            padding-left: 15px;
+            padding-left: 16px;
             &::before {
                 display: inline-block;
                 content: '';
